# rustychess

./: .gitignore  Cargo.toml  LICENSE  README.md
rustychess/: Cargo.toml
rustychess-core/: Cargo.toml
rustychess-core/src/: chessboard.rs  error.rs  file.rs  game.rs  lib.rs  pgn.rs  pieces.rs  rank.rs
rustychess-core/tests/: pgn_test.rs
rustychess/src/: chessboard.rs  command.rs  main.rs
src/: chessboard.rs  main.rs
src/pieces/: mod.rs  pawn.rs  piece.rs
