[package]
name = "rustychess"
version = "0.1.0"
authors = ["Morten Klim Sørensen <mail@kl1m.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustychess_core = { path = "../rustychess-core", version = "*" }
hashbrown = "0.11"
rustyline = "8.2.0"
colored = "2"
