[package]
name = "rustychess"
version = "0.1.0"
authors = ["Morten Klim Sørensen <mail@kl1m.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustychess_core = { path = "../rustychess-core", version = "*" }
hashbrown = "0.11"
rustyline = { version = "15.0.0", features = ["derive"] }
colored = "2"
quick-error = "2.0.1"
clap = { version = "3.2.25", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
